# naraya-agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  SECURITY.md  VPS_DEPLOY.md  install.sh  install_tools.bat  naraya.py  pyproject.toml  requirements.txt  run_daemon.bat  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  skill_submission.md
.github/workflows/: ci.yml
core/: .env.example  README_EVOLUTION.md  README_MULTIAGENT.md  README_PROVIDERS.md  README_TOOLS.md  agent_core.py  agent_registry.py  agent_tools.py  app_evaluator.py  auto_eval_loop.py  autonomous_evolution.py  autonomous_loop.py  benchmark_engine.py  build_rag.py  build_rag_incremental.py  build_skill_registry.py  build_wiki_rag.py  clarify.py  coding_cli.py  daily_hermes_sync.py  debate_engine.py  debate_memory.py  evaluation_engine.py  evolution_db.py  evolution_engine.py  executor_tool.py  feature_workers.py  file_tools.py  gateway.py  healthcheck.py  import_hermes_safe.py  incremental_hermes_sync.py  leaderboard.py  llm.py  memory_cache.py  multi_agent.py  naraya_agents.py  naraya_daemon.py  orchestrator_engine.py  paths.py  (+23 more)
core/eval/: tasks.json
skills/autonomous-ai-agents/agent-payments/: SKILL.md
skills/autonomous-ai-agents/ai-data-remediation-engineer/: SKILL.md
skills/autonomous-ai-agents/ai-engineer/: SKILL.md
skills/autonomous-ai-agents/anthropic/: SKILL.md
skills/concise-response-style/: SKILL.md
skills/dogfood/: SKILL.md
skills/nusantara-agent/: SKILL.md
(+705 files in other folders)
