[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "naraya-agent"
version = "0.1.0"
description = "Naraya — agen AI lokal berbahasa Indonesia: orkestrasi multi-agen, multi-provider, self-learning, dan 500+ skills. Jalan di terminal."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Naraya Agent contributors" }]
keywords = ["ai", "agent", "multi-agent", "llm", "indonesia", "cli", "openai", "anthropic"]
dependencies = [
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
full = [
    "anthropic>=0.39", "httpx>=0.27", "playwright>=1.45", "pyautogui>=0.9",
    "pillow>=10.0", "mcp>=1.0", "apscheduler>=3.10", "openai-agents>=0.1", "chromadb>=0.5",
]

[project.urls]
Homepage = "https://github.com/iamkatoisurbakti-eng/naraya-agent"
Repository = "https://github.com/iamkatoisurbakti-eng/naraya-agent"
Issues = "https://github.com/iamkatoisurbakti-eng/naraya-agent/issues"

[project.scripts]
naraya = "naraya:main"

[tool.setuptools]
py-modules = ["naraya"]
